--- a/style.css
+++ b/style.css
@@ -14,7 +14,6 @@ body {
   left: 0;
   top: 0;
   width: 100%;
-  height: 100%;
   overflow: hidden;
 }
 
@@ -38,7 +37,7 @@ body {
   width: 100%;
   position: relative;
   color: #fff;
-  padding-top: 130px;
+  padding-top: 20px;
 }
 
 body:before {
@@ -129,10 +128,20 @@ body:before {
     text-align: center;
 }
 
+@media screen and (min-width: 576px) {
+  #video-block{
+    height: 97%;
+  }
+
+  .main{
+    margin-top: 100px;
+  }
+}
+
 
 @media screen and (min-width: 768px) {
   #video-block{
-    height: 70%;
+    height: 90%;
   }
 
   body:before {
@@ -191,6 +200,6 @@ body:before {
 }
 @media screen and (min-width: 768px) {
   .main{
-    margin-top: 100px;
+    margin-top: 65px;
   }
 }
