--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  /*font-family: 'Montserrat';*/ /*зачем менять на шрифт с засечками?*/
+  font-family: 'Montserrat';
   font-weight: 500;
   font-size: 16px;
   padding: 0;
