--- a/styles/4_style.css
+++ b/styles/4_style.css
@@ -3,11 +3,6 @@ body{
     
 }
 
-.container{
-    /*color: #050613;*/
-    
-}
-
 .namer{
     line-height: 1;
     font-weight: bold;
@@ -30,7 +25,7 @@ body{
     /*padding: 20px;*/
 }
 
-#i{
+img.competences-img{
     position: absolute;
     z-index:-1; 
     left: -50px;
@@ -93,7 +88,7 @@ body{
     font-size: 20px;
 }
 
-#h{
+.naming{
     text-align: center;
     padding: 10px;
 }
@@ -215,7 +210,7 @@ body{
     .competency{
         text-align:center;
     }
-    #i{
+    img.competences-img{
         left: 0px;
     }
 }
