--- a/styles/style.css
+++ b/styles/style.css
@@ -8,29 +8,13 @@ body {
 }
 
 /* Шапка */
-#video-block {
-  z-index: -10;
+#header-background-video {
   position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  overflow: hidden;
-}
-
-#video-filter {
-  z-index: 1;
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.75);
-}
-
-#video-block video {
-  min-height: 100%;
+  right: 0;
+  bottom: 0;
   min-width: 100%;
-  filter: blur(2px);
+  min-height: 100%;
+  z-index: -1;
 }
 
 .header {
